<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_sign_up_1_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fragment_sign_up_user_btn_loginiv_bake"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_arrow"
                android:layout_centerVertical="true"/>



            <TextView
                android:id="@+id/fragment_sign_up_1_btn_bake"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/SIGN_UP"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"/>



        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>



    <ScrollView
        android:layout_below="@+id/fragment_sign_up_1_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/fragment_sign_up_1_iv_logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="-20dp"
                android:src="@drawable/icon_logo" />

            <TextView
                android:id="@+id/fragment_sign_up_1_step"
                android:layout_below="@+id/fragment_sign_up_1_iv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_1_3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="-45dp"/>


            <TextView
                android:id="@+id/fragment_sign_up_1_t"
                android:layout_below="@+id/fragment_sign_up_1_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fill_out_these_personal_information_fields"
                android:textColor="@android:color/black"
                android:gravity="center"/>



            <EditText
                android:id="@+id/fragment_sign_up_1_tv_email"
                android:layout_below="@+id/fragment_sign_up_1_t"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:background="@drawable/shape_text"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:drawableStart="@drawable/ic_email"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/extra_light"
                android:layout_marginTop="@dimen/_8sdp"/>




            <EditText
                android:id="@+id/fragment_sign_up_1_tv_user_name"
                android:layout_below="@+id/fragment_sign_up_1_tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:background="@drawable/shape_text"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:drawableStart="@drawable/ic_user"
                android:inputType="text"
                android:fontFamily="@font/extra_light"
                android:layout_marginTop="@dimen/_6sdp"/>



            <EditText
                android:id="@+id/fragment_sign_up_1_tv_password"
                android:layout_below="@+id/fragment_sign_up_1_tv_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:background="@drawable/shape_text"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:drawableStart="@drawable/ic_password"
                android:inputType="textPassword"
                android:fontFamily="@font/extra_light"
                />



            <EditText
                android:id="@+id/fragment_sign_up_1_tv_confirm_password"
                android:layout_below="@+id/fragment_sign_up_1_tv_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:background="@drawable/shape_text"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:drawableStart="@drawable/ic_password"
                android:inputType="textPassword"
                android:fontFamily="@font/extra_light"
                />







            <Button
                android:id="@+id/fragment_sign_up_1_btn_next"
                android:layout_below="@+id/fragment_sign_up_1_tv_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@drawable/shape_butten_color_pale"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/extra_light"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_6sdp"/>



            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_sign_up_1_btn_next"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center"
                android:layout_centerHorizontal="true">




                <TextView
                    android:id="@+id/fragment_sign_up_1_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/did_you_registered_before" />



                <TextView
                    android:layout_toEndOf="@+id/fragment_sign_up_1_tv"
                    android:id="@+id/fragment_sign_up_1_tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_5sdp"/>





            </RelativeLayout>

        </RelativeLayout>


    </ScrollView>


</RelativeLayout>