<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.activity.GarageOrUserActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <ImageView
            android:id="@+id/fragment_deskavre_3_iv_bake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_10sdp"/>


        <TextView
            android:id="@+id/fragment_deskavre_3_tv_skip"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_centerVertical="true"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/_10sdp"/>




    </RelativeLayout>







    <ImageView
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        android:src="@drawable/logo_1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_60sdp"/>



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_linear"
        android:gravity="center">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@android:color/black"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_gravity="center"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"/>




        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_discover_more_features_in_our_app"
            android:textColor="#454444"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_gravity="center"
            android:gravity="center" />




        <Button
            android:id="@+id/activity_login_garage_or_user_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:text="@string/login"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@android:color/white"
            android:fontFamily="@font/extra_light"
            android:background="@drawable/shape_butten_color"/>




        <Button
            android:id="@+id/activity_login_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/SIGN_UP"
            android:textAllCaps="false"
            android:fontFamily="@font/extra_light"
            android:textColor="@color/colorPrimaryDark"
            android:background="@drawable/shape_butten"/>






    </LinearLayout>



</RelativeLayout>