<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_sign_up_2_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fragment_sign_up_2_btn_loginiv_bake"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:src="@drawable/ic_arrow"
                android:layout_centerVertical="true"/>



            <TextView
                android:id="@+id/fragment_sign_up_2_btn_bake"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/SIGN_UP"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_12ssp"/>



        </RelativeLayout>


    </androidx.appcompat.widget.Toolbar>



    <ScrollView
        android:layout_below="@+id/fragment_sign_up_2_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/fragment_sign_up_2_iv_logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="-20dp"
                android:src="@drawable/icon_logo" />


            <TextView
                android:id="@+id/fragment_sign_up_2_step"
                android:layout_below="@+id/fragment_sign_up_2_iv_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_2_3"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="-45dp"/>


            <TextView
                android:id="@+id/fragment_sign_up_2_t"
                android:layout_below="@+id/fragment_sign_up_2_step"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fill_out_these_business_information_fields"
                android:textColor="@android:color/black"
                android:gravity="center"/>



            <EditText
                android:id="@+id/fragment_sign_up_2_tv_business_name"
                android:layout_below="@+id/fragment_sign_up_2_t"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/business_name"
                android:background="@drawable/shape_text"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:drawableStart="@drawable/ic_user"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/extra_light"
                android:layout_marginTop="@dimen/_8sdp"/>




            <EditText
                android:id="@+id/fragment_sign_up_2_tv_business_phone_number"
                android:layout_below="@+id/fragment_sign_up_2_tv_business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/business_phone_number"
                android:background="@drawable/shape_text"
                android:padding="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:drawableStart="@drawable/ic_phone"
                android:inputType="text"
                android:fontFamily="@font/extra_light"
                android:layout_marginTop="@dimen/_6sdp"/>



            <RelativeLayout
                android:id="@+id/fragment_sign_up_2_rl_type"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_below="@+id/fragment_sign_up_2_tv_business_phone_number"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/shape_text"
                android:orientation="horizontal">



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_arrow_down"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/_10sdp"/>



                <Spinner
                    android:id="@+id/fragment_sign_up_2_sp_business_type"
                    android:background="@null"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />



                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_help"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/_10sdp"/>



            </RelativeLayout>



            <EditText
                android:id="@+id/fragment_sign_up_2_tv_fragment_sign_up_2_tv_business_service"
                android:layout_below="@+id/fragment_sign_up_2_rl_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/business_service"
                android:background="@drawable/shape_text"
                android:padding="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:drawableStart="@drawable/ic_local_offer"
                android:inputType="textPassword"
                android:fontFamily="@font/extra_light"
                />







            <Button
                android:id="@+id/fragment_sign_up_1_btn_next"
                android:layout_below="@+id/fragment_sign_up_2_tv_fragment_sign_up_2_tv_business_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:background="@drawable/shape_butten_color_pale"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14ssp"
                android:fontFamily="@font/extra_light"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_6sdp"/>




        </RelativeLayout>


    </ScrollView>


</RelativeLayout>